--- a/web/html/src/branding/css/susemanager/variables.less
+++ b/web/html/src/branding/css/susemanager/variables.less
@@ -124,6 +124,11 @@
 @table-row-selected: lighten(@eos-bc-yellow-100, 5%);
 @badge-bg: @eos-bc-gray-1000;
 
+@border-radius-base: 4px;
+@border-radius-large: 4px;
+@border-radius-small: 4px;
+// $border-radius-pill: ?
+
 /**
 * FONTS
 */
